public/styles.css
.header-block,
.content-block,
.footer-block {
    /* limit width of page blocks */
    max-width: 1024px;

    /* center page blocks */
    margin: 0 auto;
}

body {
    /* get rid of body margin */
    margin: 0;

    /* set default text color */
    color: #606060;
}

.header-block .logo {
    /* give the header block logo some dimensions */
    width: 80px;
    height: 80px;
    margin: 0 auto;

    /* also give outline color so we can see */
    outline: 1px solid #EEEEEE;
}

.header-block .logo img {
    max-width: 100%;
    max-height: 100%;
}

.header-block {
    /* some padding */
    padding-top: 10px;

    /* fix so that padding is subtracted from element dimensions instead of added */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.header-block .title,
.header-block .tagline {
    /* center title and tagline */
    text-align: center;

    /* fix title and tagline margins */
    margin: 0;

    /* set font */
    font-family: 'Alex Brush';
}

/* now about font sizing ... let's try [rem units](http://snook.ca/archives/html_and_css/font-size-with-rem) */
html {
    /* magic 62.5% so that 0.1rem is 1px at default zoom */
    font-size: 62.5%;

    /* whoa, the text just got small so set back to 12px - I mean 1.2rem */
    font-size: 1.2rem;
}

.header-block .title {
    /* make the title font bigger */
    font-size: 4rem;

    /* fix margins */
    margin-top: 10px;
}

.header-block .tagline {
    font-size: 2rem;
}

.content-block {
    /* separate from header */
    margin-top: 20px;

    /* fix box sizing again so padding doesn't add to total width of block */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.content-block .images-block {
    /* give some outline color so we can see */
    outline: 1px solid #EEEEEE;
}

.content-block .images-block .image-container {
    /* give the image container relative width */
    width: 70%; /* 600px when page is at 960px */
    max-width: 700px;

    /* need height to be scaled with width. Trying the [bottom padding trick](http://stackoverflow.com/questions/11243075/css-scale-height-to-match-width-possibly-with-a-formfactor#answer-11243324) */
    /* pixel is no good. percent is based on parent height. but apparently padding is based on parent width */
    padding-bottom: 52.4%; /* 450px height at a width of 600px */
    max-height: 525px;

    /* fix box sizing again so padding doesn't add to total width of block */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;

    /* center container horizontally on page */
    margin: 0 auto;

    /* non-static position so we can position .image-wrappers */
    position: relative;
}

.content-block .images-block .image-wrapper {
    /* fit to container */
    height: 100%;
    width: 100%;

    /* stack images by positioning relative to container */
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    /* give background color so other images don't show through */
    background-color: #F5F5F5;

    /* hide overflow in case img is wider than wrapper */
    overflow: hidden;
}

.content-block .images-block .image-wrapper img {
    /* fit img to wrapper height */
    height: 100%;

    /* center in wrapper */
    margin: auto;
    display: block;
}

.content-block .images-block .previous,
.content-block .images-block .next {
    /* reset some default button styles */
    border: none;
    background: transparent;
    display: block;

    /* make font color gray */
    color: #EEEEEE;

    /* increase font-size */
    font-size: 7rem;

    /* center text in clickable area */
    text-align: center;

    /* we want cursor */
    cursor: pointer;

    /* set responsive width */
    width: 50%;

    /* fix box sizing again so padding doesn't add to total width of block */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;

    /* position relative to top of block */
    position: absolute;
    top: 0;

    /* fix height and vertical alignment */
    min-height: 100%;

    /* make sure always on top */
    z-index: 100;
}

.content-block .images-block .previous:focus,
.content-block .images-block .next:focus {
    outline: 0 none;
}

.content-block .images-block .previous {
    left: 0;

    /* push button text from center of image container */
    padding-right: 35%;
    padding-left: 0;
}

.content-block .images-block .next {
    right: 0;

    /* push button text from center of image container */
    padding-left: 35%;
    padding-right: 0;
}

.content-block .images-block {
    /* non-static position so previous and next will position properly */
    position: relative;
}

.content-block .pricing-block {
    margin-top: 40px;
}

.content-block h1 {
    /* set font */
    font-family: 'Alex Brush';
}

.pricing-block h1 {
    text-align: center;
    font-size: 1.8rem;
    margin-bottom: 0;
}

.content-block .pricing-block p {
    /* limit width of paragraphs and horizontally center */
    max-width: 700px;
    width: 70%;
    margin: 20px auto 0;
}

.content-block .round-price-block,
.content-block .square-price-block,
.content-block .sheet-price-block {
    /* 3 column layout */
    float: left;
    width: 33.3%;
    padding-left: 20px;

    /* fix margin */
    margin-top: 40px;

    /* minimum width before content breaks */
    min-width: 210px;

    /* fix box sizing again so padding doesn't add to total width of block */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.content-block .price-charts-block :first-child {
    padding-left: 0;
}

.content-block .round-price-block h1,
.content-block .square-price-block h1,
.content-block .sheet-price-block h1 {
    /* fix margins */
    margin: 0;
}

.content-block .round-price-block table,
.content-block .square-price-block table,
.content-block .sheet-price-block table {
    /* also give outline color so we can see */
    outline: 1px solid #EEEEEE;

    border-radius: 5px;

    /* dimensions */
    width: 100%;
}

.content-block .round-price-block table td,
.content-block .square-price-block table td,
.content-block .sheet-price-block table td {
    text-align: center;
}

.content-block .pricing-block .addons {
    /* clear pricing charts */
    clear: both;

    /* set max width */
    max-width: 700px;
    margin: 40px auto 0;
}

.content-block .price-charts-block {
    /* fix overlapping margin with addons */
    overflow: hidden;

    /* fix hidden outline */
    padding: 0 0 1px 1px;
}

.footer-block {
    margin-top: 40px;
}

.footer-block .contact-info-block {
    text-align: center;

    /* horizontally center */
    width: 33.3%;
    min-width: 310px;
    margin: auto;

    /* also give outline color so we can see */
    outline: 1px solid #EEEEEE;

    /* some padding */
    padding: 20px;

    /* fix box sizing again so padding doesn't add to total width of block */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.footer-block .contact-info-block h1,
.footer-block .contact-info-block h2 {
    /* set font */
    font-family: 'Alex Brush';
    margin: 0;
}

.footer-block .contact-info-block h1 {
    font-size: 2rem;
}

.footer-block .contact-info-block h2 {
    font-size: 1rem;
}

.footer-block .contact-info-block .email,
.footer-block .contact-info-block .phone {
    text-decoration: none;
    color: #606060;
    display: block;
    margin-top: 5px;
    font-size: 0.8rem;
}

.footer-block .contact-info-block .email:hover,
.footer-block .contact-info-block .phone:hover {
    text-decoration: underline;
}

.footer-block .contact-info-block .phone {
    text-decoration: none;
    color: #606060;
    display: block;
    margin-top: 5px;
    font-size: 0.8rem;
}

.footer-block .contact-info-block .phone:hover {
    text-decoration: underline;
}

.footer-block {
    /* non-static so we can position copyright and social links */
    position: relative;
}

.footer-block .copyright,
.footer-block .social-icons-block {
    /* give dimension */
    width: 33.3%;
    height: 100px;

    /* position */
    position: absolute;
    bottom: 0;

    /* padding */
    padding-top: 20px;

    /* fix box sizing again so padding doesn't add to total width of block */
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;

    /* font */
    font-size: 0.8rem;
}

.footer-block .copyright {
    left: 0;
    text-align: right;
    padding-right: 20px;
    border-top: 1px solid #EEEEEE;
}

.footer-block .social-icons-block {
    right: 0;
    text-align: left;
    padding-left: 20px;
    padding-bottom: 20px;
    border-top: 1px solid #EEEEEE;
}

.footer-block .social-icons-block iframe {
    display: block;
    float: left;
}

